--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
             <a href="index.html"><img src="img/logobecastorheader.png" alt="Logo de la marca"></a>
         </div>
-        <nav>
+        <nav id="">
             <ul class="nav-links">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="html/conocenos.html">Conocenos</a></li>
