--- a/html/conocenos.html
+++ b/html/conocenos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="../css/conocenos.css"></link>
+    <link rel="stylesheet" href="../css/barra_navegacion.css"></link>
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 <body>
