--- a/html/login.html
+++ b/html/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="../css/login.css"></link>
+    <link rel="stylesheet" href="../css/barra_navegacion.css"></link>
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -25,16 +26,18 @@
     </header>
     
     <div class="wrapper">
-        <form action="">
+        <form action="iniciarSes.php" method="POST">
             <h1>Iniciar Sesión</h1>
+            <!-- Div para mostrar mensaje de error  -->
+            <div id="div_error"></div> 
 
             <div class="input-box">
-                <input type="text" placeholder="Usuario" required>
+                <input type="text" name="correo" placeholder="Usuario" required>
                 <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Constraseña" required>
+                <input type="password" name="contrasena" placeholder="Constraseña" required>
                 <i class='bx bxs-lock-alt' ></i>
             </div>
 
@@ -43,12 +46,45 @@
                 <a href="#">¿Olvidaste tu contraseña?</a>
             </div>
 
-            <button type="submit" class="btn">Iniciar Sesión</button>
+            <button type="submit" value="Login" class="btn">Iniciar Sesión</button>
 
             <div class="register-link">
                 <p>¿No tienes una cuenta?, <a href="#">¡Registrate aquí!</p>
             </div>
         </form>
+        <script>
+            // Leer la URL para mostrar el mensaje de error
+            const urlParams = new URLSearchParams(window.location.search);
+            const error = urlParams.get('error');
+            if (error === '1') {
+                const div_error = document.getElementById('div_error'); //Creacion del objeto Div_error
+                    const mostrar_erro = document.createElement('div');//creacion de un nuevo div
+                    mostrar_erro.textContent = "Usuario o contraseña incorrectos"; //asignacion de Texto al Div
+
+                // Personalizacion del div
+                div_error.style.backgroundColor = '#e60f0f79';
+                
+                div_error.style.
+
+                div_error.style.display = "flex";
+                div_error.style.height = "40px";
+                div_error.style.alignItems = "center";
+                div_error.style.justifyContent = "center";
+                /*margen*/
+                div_error.style.marginTop = "-15px";
+                div_error.style.marginBottom = "10px";
+                /*borde*/
+                div_error.style.border = "solid";
+                div_error.style.borderColor ="#d40101";
+                div_error.style.borderRadius = '10px';
+                    /*Personalizar mensaje*/
+                    mostrar_erro.style.fontFamily = "'Overpass', sans-serif";
+                    mostrar_erro.style.fontSize = "20px"
+                    mostrar_erro.style.textAlign = "center"
+                    mostrar_erro.style.color  ="white"
+                div_error.appendChild(mostrar_erro); //Agregar nuevo div con mensaje al div_error
+            }
+        </script>
     </div>
 </body>
 </html>
