--- a/html/registro.html
+++ b/html/registro.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link rel="stylesheet" href="../css/registro.css">
+    <link rel="stylesheet" href="../css/barra_navegacion.css">
     <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -24,11 +25,11 @@
     </header>
     
     <div class="wrapper">
-        <form action="">
+        <form action="" action="registro.php" method="POST">
             <h1>Registro</h1>
 
             <div class="input-box">
-                <input type="text" placeholder="Nombres" required>
+                <input type="text" placeholder="Nombres" name="nombre" required>
             </div>
 
             <div class="input-box">
@@ -40,7 +41,7 @@
             </div>
 
             <div class="input-box">
-                <input type="email" placeholder="Correo Electrónico" required>
+                <input type="email" name="correo" placeholder="Correo Electrónico" required>
             </div>
 
             <div class="input-box">
@@ -48,10 +49,10 @@
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Confirmar Contraseña" required>
+                <input type="password" name="contrasena" placeholder="Confirmar Contraseña" required>
             </div>
 
-            <button type="submit" class="btn">Registrarse</button>
+            <button type="submit" value="login" class="btn">Registrarse</button>
 
             <div class="register-link">
                 <p>¿Ya tienes una cuenta?, <a href="login.html">¡Inicia sesión aquí!</p>
