--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/index.css"></link>
+    <link rel="stylesheet" href="css/barra_navegacion.css"></link>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -12,15 +13,18 @@
         <div class="logo">
             <a href="index.html"><img src="img/logobecastorheader.png" alt="Logo de la marca"></a>
         </div>
-        <nav id="navBotones">
-            <ul class="nav-links">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="html/conocenos.html">Conocenos</a></li>
-                <li><a href="html/login.html">Log In</a></li>
-                <li><a href="html/registro.html">Registro</a></li>
-            </ul>
-        </nav>
-        <a href="#" class="btn"><button>Contact</button></a>
+        <div class="derecha">
+            <nav id="navBotones">
+                <ul class="nav-links">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="html/conocenos.html">Conocenos</a></li>
+                    <li><a href="html/login.html">Log In</a></li>
+                    <li><a href="html/registro.html">Registro</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="btn"><button>Contact</button></a>
+        </div>
+        
     </header>
     <main >   
         <p id="slogan">"Becastor: ¡Inspirando logros con cada mordisco!"</p>
