--- a/html/registro.html
+++ b/html/registro.html
@@ -25,7 +25,7 @@
     </header>
     
     <div class="wrapper">
-        <form action="" action="registro.php" method="POST">
+        <form action="" action="../php/registro.php" method="POST">
             <h1>Registro</h1>
 
             <div class="input-box">
