--- a/html/estudianteInicio.html
+++ b/html/estudianteInicio.html
@@ -42,12 +42,71 @@
                 <i class='bx bx-search-alt bx-rotate-90' ></i>
             </div>
         </div>
-        <div class="card">
-            <img src="../img/BBVA.jpg" alt="imagen"> 
-            <h3>BBVA</h3>
-            <P>Secundaria</P> 
+        <div id="contenedor_opciones">
+            <div class="card">
+                <img src="../img/BBVA.jpg" alt="imagen"> 
+                <h3>Beca BBVA</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P> 
+                    <p>prepa</p>
+                    <P>Secundaria</P> 
+                    <p>prepa</p>
+                    <P>Secundaria</P> 
+                    <p>prepa</p>
+                </div>
+                <p class="descripcion_beca">Beca para <strong>Cavos que inspiran</strong> </p>
+            </div>
+            <div class="card">
+                <img src="../img/BenitoJuarez.jpg" alt="imagen"> 
+                <h3>Beca Benito Juarez</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div> 
+            </div>
+            <div class="card">
+                <img src="../img/Santander.jpg" alt="imagen"> 
+                <h3>Beca Santander</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div> 
+            </div>
+            <div class="card">
+                <img src="../img/Santander.jpg" alt="imagen"> 
+                <h3>Beca Santander</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div>  
+                
+            </div>
+            <div class="card">
+                <img src="../img/BenitoJuarez.jpg" alt="imagen"> 
+                <h3>Beca Benito Juarez</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="../img/BBVA.jpg" alt="imagen"> 
+                <h3>BBVA</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="../img/BBVA.jpg" alt="imagen"> 
+                <h3>BBVA</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div>  
+            </div>
+            <div class="card">
+                <img src="../img/BBVA.jpg" alt="imagen"> 
+                <h3>BBVA</h3>
+                <div class="etiquetas">
+                    <P>Secundaria</P>
+                </div> 
+            </div>
         </div>
-
     </div>
 
     <script src="../scripts/menu_hamburguesa.js"></script>
